--- a/src/views/Home/css/style.scss
+++ b/src/views/Home/css/style.scss
@@ -1,7 +1,26 @@
 @import "assets/css/variables.scss";
 @import "bulma/bulma";
 
-// #home-view {
-//   color: $greenPrimary;
-//   background-color: $bodyColor;
-// }
+#home-view {
+  h1 {
+    color: #000;
+    font-family: $familySecond;
+    font-size: 60px;
+  }
+  span {
+    font-size: 60px;
+    font-style: italic;
+    font-weight: 200;
+  }
+}
+
+@include touch {
+  #home-view {
+    h1 {
+      font-size: 35px;
+    }
+    span {
+      font-size: 35px;
+    }
+  }
+}
