--- a/src/views/Result/css/style.css
+++ b/src/views/Result/css/style.css
@@ -6956,18 +6956,18 @@ label.panel-block {
   background-color: #fafafa;
   padding: 3rem 1.5rem 6rem; }
 
-#title-component h1 {
+#result-view h1 {
   color: #000;
   font-family: monaco, Consolas, "Lucida Console", monospace;
-  font-size: 60px; }
+  font-size: 40px; }
 
-#title-component span {
-  font-size: 60px;
+#result-view span {
+  font-size: 40px;
   font-style: italic;
   font-weight: 200; }
 
 @media screen and (max-width: 1023px) {
-  #title-component h1 {
+  #result-view h1 {
     font-size: 35px; }
-  #title-component span {
+  #result-view span {
     font-size: 35px; } }
