--- a/src/views/Result/css/style.scss
+++ b/src/views/Result/css/style.scss
@@ -1,21 +1,21 @@
-@import 'assets/css/variables.scss';
-@import 'bulma/bulma';
+@import "assets/css/variables.scss";
+@import "bulma/bulma";
 
-#title-component {
+#result-view {
   h1 {
     color: #000;
     font-family: $familySecond;
-    font-size: 60px;
+    font-size: 40px;
   }
   span {
-    font-size: 60px;
+    font-size: 40px;
     font-style: italic;
     font-weight: 200;
   }
 }
 
 @include touch {
-  #title-component {
+  #result-view {
     h1 {
       font-size: 35px;
     }
